--- a/app/src/main/res/layout/fragment_crime.xml
+++ b/app/src/main/res/layout/fragment_crime.xml
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content" />
 
     <CheckBox
-        android:id="@+id/crime_solved"
+        android:id="@+id/crime_solved_box"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/crime_solved_label" />
